# particles

./: .gitignore  CMakeLists.txt  README.md
shaders/: billboard-animated.vs  billboard.fs  billboard.vs  simple-texture.fs  simple-texture.vs  unlit.fs  unlit.vs
src/: billboard-axis.cpp  demo.cpp  explosion.cpp  sparkle-trail.cpp  sparkles.cpp
src/agl/: aglm.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  window.cpp  window.h
src/agl/mesh/: capsule.cpp  capsule.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  plane.cpp  plane.h  pyramid.cpp  pyramid.h  sphere.cpp  sphere.h  teapot.cpp  teapot.h  teapotdata.h  torus.cpp  torus.h
